k8s/booksclient-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: booksapp
  labels:
    app: booksapp
spec:
  type: ClusterIP
  selector:
    app: booksapp
  ports:
    - protocol: TCP
      port: 4100
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksapp
  labels:
    app: booksapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booksapp
  template:
    metadata:
      labels:
        app: booksapp
    spec:
      containers:
        - name: booksapp
          image: books-api-client:latest
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 80
